# hybrid-coco

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
plugin/scripts/: hc-pre-tool-use.sh  hc-session-start.sh
scripts/: benchmark.py
skills/hybrid-coco/: SKILL.md
skills/hybrid-coco/references/: cli-commands.md  mcp-tools.md
src/hybrid_coco/: __init__.py  cli.py  config.py  indexer.py  server.py  store.py
src/hybrid_coco/assets/: hybrid-coco.md
src/hybrid_coco/assets/hooks/: hc-post-tool-use.sh  hc-pre-tool-use.sh
src/hybrid_coco/assets/skills/hc-init/: SKILL.md
src/hybrid_coco/assets/skills/hc-search/: SKILL.md
src/hybrid_coco/parsers/: __init__.py  base.py  js_parser.py  python_parser.py  rust_parser.py
tests/: test_indexer.py
